force-app/main/default/objects/LLC_BI__Policy__c/LLC_BI__Policy__c.object-meta.xml
<CustomObject>
    <description>This object stores policies used with Policy Management.</description>
    <label>Policy</label>
    <nameField>
        <label>Policy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Policies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>