force-app/main/default/objects/LLC_BI__Policy__c/fields/LLC_BI__Routing_Dimension_Values__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Routing_Dimension_Values__c</fullName>
    <description>Administrators populate this required text field with the routing dimension values for this policy. By default, the value is blank.</description>
    <inlineHelpText>Enter routing dimension values for this policy, separated by commas.</inlineHelpText>
    <label>Routing Dimension Values</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>